--- a/index.html
+++ b/index.html
@@ -1,82 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Welcome to the bank</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <h1 class="text-5xl text-center mt-16 mb-16 mx-8">
-        Welcome to <span class="text-rose-400">My Bank</span>
-      </h1>
+        <h1 class="text-5xl text-center mt-16 mb-16">Welcome to <span class="text-rose-400">My Bank</span></h1>
     </header>
     <main class="w-3/4 mx-auto">
-      <section class="mt-16">
-        <div class="grid lg:grid-cols-3 grid-cols-1 gap-6 text-white">
-          <div class="bg-blue-500 p-8 rounded">
-            <h3 class="text-xl mb-2">Deposit</h3>
-            <h4 class="text-5xl">$<span id="deposit-money">00</span></h4>
-          </div>
-          <div class="bg-indigo-500 p-8 rounded">
-            <h3 class="text-xl mb-2">Withdraw</h3>
-            <h4 class="text-5xl">$<span id="withdraw-money">00</span></h4>
-          </div>
-          <div class="bg-green-500 p-8 rounded">
-            <h3 class="text-xl mb-2">Balance</h3>
-            <h4 class="text-5xl">$<span id="balance-total">100</span></h4>
-          </div>
-        </div>
-      </section>
-      <!-- deposit and withdraw -->
-      <section class="mt-8 mb-8">
-        <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
-          <div class="bg-green-200 rounded p-4">
-            <h3 class="text-2xl ml-3">Please Deposite</h3>
-            <div>
-              <input
-                type="text"
-                id="deposit-input"
-                placeholder="$"
-                class="border border-gray-400 rounded block m-3 p-1 w-3/4"
-              />
-
-              <button
-                id="deposit-button"
-                type="submit"
-                class="bg-sky-500 font-semibold text-white rounded mx-2 my-1 px-4 py-1"
-              >
-                Deposit
-              </button>
+        <section class="mt-16">
+            <div class="grid grid-cols-3 gap-6 text-white">
+                <div class="bg-blue-500 p-8 rounded">
+                    <h3 class="text-xl mb-2">Deposit</h3>
+                    <h4 class="text-5xl">$<span id="deposit-money">00</span> </h4>
+                </div>
+                <div class="bg-indigo-500 p-8 rounded">
+                    <h3 class="text-xl mb-2">Withdraw</h3>
+                    <h4 class="text-5xl">$<span id="withdraw-money">00</span></h4>
+                </div>
+                <div class="bg-green-500 p-8 rounded">
+                    <h3 class="text-xl mb-2">Balance</h3>
+                    <h4 class="text-5xl">$<span id="balance-total">100</span></h4>
+                </div>
             </div>
-          </div>
-          <div class="bg-red-200 rounded p-4">
-            <h3 class="text-2xl ml-3">Please Withdraw</h3>
-            <div>
-              <input
-                type="text"
-                id="withdraw-input"
-                placeholder="$"
-                class="border border-gray-400 rounded block m-3 p-1 w-3/4"
-              />
+        </section>
+        <!-- deposit and withdraw -->
+        <section class="mt-8">
+            <div class="grid grid-cols-2 gap-6">
+                <div class="bg-green-200 rounded p-4">
+                    <h3 class="text-2xl ml-3">Please Deposite</h3>
+                    <div>
+                        <input type="text" id="deposit-input" placeholder="$"
+                            class="border border-gray-400 rounded block m-3 p-1 w-3/4">
 
-              <button
-                id="withdraw-button"
-                type="submit"
-                class="bg-sky-500 font-semibold text-white rounded mx-2 my-1 px-4 py-1"
-              >
-                Withdraw
-              </button>
+                        <button id="deposit-button" type="submit"
+                            class="bg-sky-500 font-semibold text-white rounded mx-2 my-1 px-4 py-1">Deposit</button>
+                    </div>
+                </div>
+                <div class="bg-red-200 rounded p-4">
+                    <h3 class="text-2xl ml-3">Please Withdraw</h3>
+                    <div>
+                        <input type="text" id="withdraw-input" placeholder="$"
+                            class="border border-gray-400 rounded block m-3 p-1 w-3/4">
+
+                        <button id="withdraw-button" type="submit"
+                            class="bg-sky-500 font-semibold text-white rounded mx-2 my-1 px-4 py-1">Withdraw</button>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </section>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
 
-    <script src="bank.js"></script>
-  </body>
+    </footer>
+
+    <script src="banking.js"></script>
+</body>
+
 </html>
